--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,25 +2,59 @@
 @import '../../bower_components/bourbon/dist/bourbon';
 @import '../../bower_components/neat/app/assets/stylesheets/neat';
 
+$font-main: Helvetica, arial, freesans, clean, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+
 // Custom Styles
 body {
-  background: #fafafa;
+  background: #666674;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #333;
 }
 
-.hero-unit {
-  margin: 50px auto 0 auto;
-  width: 600px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
-  h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
+nav {
+  font-family: $font-main;
+  font-weight: bold;
+  font-size: 14px;
+  height: 55px;
+  width: 100%;
+  background: #F5F5F5;
+}
+
+.nav-bar {
+  display: inline-block;
+  margin-left: 13%;
+  padding-top: 0;
+  width: 62%;
+}
+
+.nav-bar-right {
+  margin-left: 61%;
+  margin-top: 0;
+  padding-top: 0;
+  width: 50%;
+}
+
+.nav-name {
+  float: right;
+  margin-left: 2%;
+  margin-right: -3%;
+  padding: 12px;
+  padding-left: -12px;
+  padding-right: 12px;
+}
+
+.nav-text {
+  display: inline-block;
+  margin-left: 2%;
+  margin-top: 0%;
+}
+
+h1 {
+  font-size: 60px;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+
+li {
+  list-style-type: none;
 }
