--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,6 +18,7 @@ body {
   background-image: url('../images/octocatfaded.png');
   background-repeat: no-repeat;
   background-position: right center;
+  background-size: 30%;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #333;
 }
@@ -65,4 +66,8 @@ li {
 
 #token, #url {
   margin: 5%;
+}
+
+.token-wrapper {
+  margin-left: 16.5%;
 }
